--- a/front/recursos/src/app/components/user/aspirante/aspirante.component.html
+++ b/front/recursos/src/app/components/user/aspirante/aspirante.component.html
@@ -7,8 +7,11 @@
     
     <!-- Datos Personales  -->
     <div class="display-2 bor my-5 text-center fontTitle col-title">Datos Personales</div>
-    <div class="row">
-        <div class="col-6 ">
+    <div class="row needs-validation" novalidate>
+        <div class="text-center mb-3" *ngIf="arpiranteIncorrecto">
+            <span class="badge bg-danger textError">Verifica tus datos personales</span>
+        </div>
+        <div class="col-4 ">
             <div>
                 <input class="form-control form-control-lg mt-5" type="text" placeholder="Nombre" aria-label=".form-control-lg nombre">
                 <div class="invalid-feedback">
@@ -28,9 +31,43 @@
                 <option value="1">Femenino</option>
                 <option value="2">Másculino</option>
             </select>
-            <input class="form-control form-control-lg mt-5" type="text" placeholder="Estado" aria-label=".form-control-lg ciudad">
+            <select class="form-select mt-5" aria-label=".form-control-lg Estado">
+                <option selected>Seleciona el estado</option>
+                <option value="1">Aguascalientes</option>
+                <option value="2">Baja California</option>
+                <option value="3">Baja California Sur</option>
+                <option value="4">Campeche</option>
+                <option value="5">Chiapas</option>
+                <option value="6">Chihuahua</option>
+                <option value="7">Ciudad de México</option>
+                <option value="8">Coahuila</option>
+                <option value="9">Colima</option>
+                <option value="10">Durango</option>
+                <option value="11">Estado de México</option>
+                <option value="12">Guanajuato</option>
+                <option value="13">Guerrero</option>
+                <option value="14">Hidalgo</option>
+                <option value="15">Jalisico</option>
+                <option value="16">Michoacán</option>
+                <option value="17">Morelos</option>
+                <option value="18">Nayarit</option>
+                <option value="19">Nuevo León</option>
+                <option value="20">Oxaca</option>
+                <option value="21">Puebla</option>
+                <option value="22">Querétaro</option>
+                <option value="23">Qintanaroo</option>
+                <option value="24">San Luis Potosí</option>
+                <option value="25">Sinaloa</option>
+                <option value="26">Sonora</option>
+                <option value="27">Tabasco</option>
+                <option value="28">Tamaulipas</option>
+                <option value="29">Tlaxcala</option>
+                <option value="30">Veracruz</option>
+                <option value="31">Yucatán</option>
+                <option value="32">Zacatecas</option>
+            </select>
             <input class="form-control form-control-lg mt-5" type="text" placeholder="Domicilio" aria-label=".form-control-lg celular">
-            <input class="form-control form-control-lg mt-5" type="text" placeholder="Télefono" aria-label=".form-control-lg email-personal">
+            <input class="form-control form-control-lg mt-5" type="number" placeholder="Télefono" aria-label=".form-control-lg email-personal">
         </div>
     </div>
     
@@ -44,9 +81,37 @@
             <input class="form-control form-control-lg mt-5" type="text" placeholder="Matricula Escolar" aria-label=".form-control-lg matricula-escolar">
         </div>
         <div class="col-6 ">
-            <input class="form-control form-control-lg mt-5" type="text" placeholder="Modalidad Escolar" aria-label=".form-control-lg modalidad-escolar">
-            <input class="form-control form-control-lg mt-5" type="text" placeholder="Plan Educativo" aria-label=".form-control-sm plan-educativo">
-            <input class="form-control form-control-lg mt-5" type="text" placeholder="Periodo" aria-label=".form-control-lg periodo">
+            <select class="form-select mt-5" aria-label=".form-control-lg modalidad-escolar">
+                <option selected>Modalidad escolar</option>
+                <option value="1">Escolarizada</option>
+                <option value="2">Abierta</option>
+                <option value="3">Línea</option>
+                <option value="4">Otro</option> 
+            </select>
+            <select class="form-select mt-5" aria-label=".form-control-lg plan-educativo">
+                <option selected>Plan educativo</option>
+                <option value="1">Semestral</option>
+                <option value="2">Cuatrimestral</option>
+                <option value="3">Trimestral</option>
+                <option value="4">Bimestral</option> 
+                <option value="4">Otro  </option> 
+            </select>
+            <select class="form-select mt-5" aria-label=".form-control-lg periodo">
+                <option selected>Periodo</option>
+                <option value="1">1ero</option>
+                <option value="2">2do</option>
+                <option value="3">3ro</option>
+                <option value="4">4to</option> 
+                <option value="5">5to</option>
+                <option value="6">6to</option>
+                <option value="7">7mo</option>
+                <option value="8">8vo</option>
+                <option value="9">9no</option> 
+                <option value="10">10mo</option> 
+                <option value="11">11vo</option>
+                <option value="12">12vo</option> 
+                <option value="10">Otro</option> 
+            </select>
         </div>
     </div>
 
@@ -54,21 +119,39 @@
     <div class="display-2 bor my-5 text-center fontTitle col-title">Datos de Ingreso</div>
     <div class="row">
         <div class="col-6 ">
-            <input class="form-control form-control-lg mt-5" type="text" placeholder="Trámite" aria-label=".form-control-lg tramite">
+            <select class="form-select mt-5" aria-label=".form-control-lg tramite">
+                <option selected>Trámite</option>
+                <option value="1">Estadías</option>
+                <option value="2">Prácticas Profesionales</option>
+                <option value="3">Residencnias</option>
+                <option value="4">Servicio Social</option> 
+                <option value="5">Capacitación</option> 
+            </select>
             <input class="form-control form-control-lg mt-5" type="text" placeholder="Perfilamiento" aria-label=".form-control-sm perfilamiento">
-            <input class="form-control form-control-lg mt-5" type="text" placeholder="Turno" aria-label=".form-control-lg turno">
+            <select class="form-select mt-5" aria-label=".form-control-lg turno">
+                <option selected>Turno</option>
+                <option value="1">Vespertino</option>
+                <option value="2">Matutino</option>
+            </select>
             <input class="form-control form-control-lg mt-5" type="text" placeholder="Horario" aria-label=".form-control-lg horario">
         </div>
         <div class="col-6 ">
-            <input class="form-control form-control-lg mt-5" type="text" placeholder="Modalidad" aria-label=".form-control-lg modalidad">
+            <select class="form-select mt-5" aria-label=".form-control-lg modalidad">
+                <option selected>Modalidad</option>
+                <option value="1">Presencial</option>
+                <option value="2">En linea</option>
+                <option value="3">Híbrida</option>
+            </select>
             <input class="form-control form-control-lg mt-5" type="text" placeholder="CV" aria-label=".form-control-sm cv">
             <input class="form-control form-control-lg mt-5" type="text" placeholder="Historial Académico" aria-label=".form-control-lg historial-academico">
         </div>
     </div>
-
+    
     <!-- Boton -->
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
         <button class="btn btn-secondary me-md-2 mb-5" type="button">Enviar</button>
     </div>
 
+
+    
 </div>
