--- a/front/recursos/src/app/components/user/aspirante/aspirante.component.html
+++ b/front/recursos/src/app/components/user/aspirante/aspirante.component.html
@@ -14,6 +14,17 @@
         <div class="col-4 ">
             <div>
                 <input class="form-control form-control-lg mt-5" type="text" placeholder="Nombre" aria-label=".form-control-lg nombre">
+                <script>
+                    fetch('/obtenerNombre') // Realiza una solicitud GET al endpoint del backend
+                        .then(response => response.json()) // Convierte la respuesta en JSON
+                        .then(data => {
+                            // Muestra el nombre en el párrafo con id "nombre"
+                            document.getElementById('nombre').textContent = data.nombre;
+                        })
+                        .catch(error => {
+                            console.error('Error al obtener el nombre desde el backend:', error);
+                        });
+                        </script>
                 <div class="invalid-feedback">
                     Please, choose a name.
                 </div>
