--- a/front/recursos/src/app/components/user/nuevo-aspirante/nuevo-aspirante.component.html
+++ b/front/recursos/src/app/components/user/nuevo-aspirante/nuevo-aspirante.component.html
@@ -47,91 +47,8 @@
     <div class="row" >
         <div class="col-9">
             <div class="d-grid gap-2 my-5 fontTitle col2">
-                <button type="button" class="btn text-white btn-size text-center" data-bs-toggle="modal" data-bs-target="#miModal">Aspirantes</button>
-                <div class="modal fade" id="miModal">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h4 class="modal-title">Alumnos</h4>
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      </div>
-                      <div class="modal-body">
-                        <div class="container-fluid">
-                          <div class="row">
-                            <div class="col-md-12">
-                              <form class="row g-3 needs-validation" novalidate>
-                                <div class="col-md-4">
-                                  <label for="validationCustom01" class="form-label">Nombre</label>
-                                  <input type="text" class="form-control" id="validationCustom01" value="" required>
-                                  <div class="valid-feedback">
-                                    Bien hecho!
-                                  </div>
-                                </div>
-                                <div class="col-md-4">
-                                  <label for="validationCustom02" class="form-label">Apellido Paterno</label>
-                                  <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
-                                  <div class="valid-feedback">
-                                    Bien
-                                  </div>
-                                </div>
-                                
-                                <div class="col-md-4">
-                                  <label for="validationCustomUsername" class="form-label">Ape</label>
-                                  <div class="input-group has-validation">
-                                    <span class="input-group-text" id="inputGroupPrepend">@</span>
-                                    <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-                                    <div class="invalid-feedback">
-                                      Please choose a username.
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="col-md-6">
-                                  <label for="validationCustom03" class="form-label">City</label>
-                                  <input type="text" class="form-control" id="validationCustom03" required>
-                                  <div class="invalid-feedback">
-                                    Please provide a valid city.
-                                  </div>
-                                </div>
-                                <div class="col-md-3">
-                                  <label for="validationCustom04" class="form-label">State</label>
-                                  <select class="form-select" id="validationCustom04" required>
-                                    <option selected disabled value="">Choose...</option>
-                                    <option>...</option>
-                                  </select>
-                                  <div class="invalid-feedback">
-                                    Please select a valid state.
-                                  </div>
-                                </div>
-                                <div class="col-md-3">
-                                  <label for="validationCustom05" class="form-label">Zip</label>
-                                  <input type="text" class="form-control" id="validationCustom05" required>
-                                  <div class="invalid-feedback">
-                                    Please provide a valid zip.
-                                  </div>
-                                </div>
-                                <div class="col-12">
-                                  <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                                    <label class="form-check-label" for="invalidCheck">
-                                      Agree to terms and conditions
-                                    </label>
-                                    <div class="invalid-feedback">
-                                      You must agree before submitting.
-                                    </div>
-                                  </div>
-                                </div>
-                              </form>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                        <button type="button" class="btn btn-primary">Guardar cambios</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+                <button type="button" class="btn text-white btn-size text-center" data-bs-toggle="modal" data-bs-target="#miModal" (click)="aspirante()">Aspirantes</button>
+                
                 
             </div>
         </div>
