added algunas cosillas

--- a/frontend/recursos/src/app/components/admin/panel/editar/editar.component.html
+++ b/frontend/recursos/src/app/components/admin/panel/editar/editar.component.html
@@ -1,6 +1,56 @@
+<!-- Nav -->
+<app-navv></app-navv>
 
+<!-- Mostrar la informacion -->
 <table class="table table-striped mt-3">
     <tbody>
-        <!-- <div class="row" *ngFor="let list of alumnos"></div> -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 mt-4">
+                    <label>Nombre</label>
+                    <input type="text" class="form-control" placeholder="Escribe tu nombre" id="nombre" name="nombre" >
+                </div>
+                <div class="col-md-4 mt-4">
+                    <label>Apellido Paterno</label>
+                    <input type="text" class="form-control" placeholder="Escribe tu apellido paterno" id="apellidoPaterno" name="apellidoPaterno">
+                </div>
+                <div class="col-md-4 mt-4">
+                    <label>Apellido Materno</label>
+                    <input type="text" class="form-control" placeholder="Escribe tu apellido materno" id="apellidoMaterno" name="apellidoMaterno">
+                </div>
+                <div class="col-md-6 mt-4">
+                    <label>Genero</label>
+                    <input type="text" class="form-control" placeholder="Escribe tu género" id="genero" name="genero" >
+                </div>
+                <div class="col-md-6 mt-4">
+                    <label>CURP</label>
+                    <input type="text" class="form-control" placeholder="Escribe tu curp" id="curp" name="curp" >
+                </div>
+                <div class="col-md-4 mt-4">
+                    <label>Estado</label>
+                    <input type="text" class="form-control" placeholder="Escribe tu curp" id="estado" name="estado">
+                </div>
+                <div class="col-md-4 mt-4">
+                    <label>Ciudad</label>
+                    <input type="text" class="form-control" placeholder="Escribe tu curp" id="ciudad" name="ciudad">
+                </div>
+                <div class="col-md-4 mt-4">
+                    <label>Domicilio</label>
+                    <input type="text" class="form-control" placeholder="Escribe tu curp" id="domicilio" name="domicilio">
+                </div>
+                <div class="col-md-4 mt-4">
+                    <label>Celular</label>
+                    <input type="text" class="form-control" placeholder="Escribe tu curp" id="celular" name="celular">
+                </div>
+                <div class="col-md-4 mt-4">
+                    <label>Telefono</label>
+                    <input type="text" class="form-control" placeholder="Escribe tu curp" id="telefono" name="telefono">
+                </div>
+                <div class="col-md-4 mt-4">
+                    <label>Correo Personal</label>
+                    <input type="email" class="form-control" placeholder="Escribe tu email" id="email" name="email">
+                </div>
+            </div>
+        </div>
     </tbody>
 </table>
