--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -4,6 +4,7 @@
         <button type="button" class="btn btn-primary border-0" (click)="inicio()">Inicio</button>
         <button type="button" class="btn btn-primary border-0">Gestionar Alumno</button>
         <button type="button" class="btn btn-primary border-0">Reportes</button>
+        <button type="button" class="btn btn-primary border-0" (click)="datos_escolares()">Datos Escolares</button>
         <button type="button" class="btn btn-primary border-0">Cerrar Sesión</button>
     </div>
 </div>
