--- a/frontend/recursos/src/app/components/admin/panel/watch/watch.component.html
+++ b/frontend/recursos/src/app/components/admin/panel/watch/watch.component.html
@@ -3,43 +3,53 @@
 
 <!-- Ver los datos de alumno -->
 <div class="mt-4 container-lg">
-    <h1 class="mt-5 font-weight-bold mb-4 text-center">Ver Datos</h1>
+    <h1 class="mt-5 font-weight-bold mb-4 text-center">Información</h1>
     <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-primary border-0" type="submit">Buscar</button>
     </form>
-    <div class="">
-        <div class="mt-4">
-            <div class="row btn-primary text-white text-center">
-                <div class="col">ID</div>
-                <div class="col">Nombre</div>
-                <div class="col">Primer Apellido</div>
-                <div class="col">Segundo Apellido</div>
-                <div class="col">Genero</div>
-                <div class="col">CURP</div>
-                <div class="col">Estado</div>
-                <div class="col">Ciudad</div>
-                <div class="col">Domicilio</div>
-                <div class="col">Celular</div>
-                <div class="col">Telefono</div>
-                <div class="col">Email</div>
-            </div>
-        </div>
-        <table class="table table-striped mt-3">
-            <tbody>
-                <div class="row text-center" *ngFor="let Alumno of alumno">
-                    <div class="col">{{Alumno.id}}</div>
-                    <div class="col">{{Alumno.nombres}}</div>
-                    <div class="col">{{Alumno.primerApellido}}</div>
-                    <div class="col">{{Alumno.segundoApellido}}</div>
-                    <div class="col">{{Alumno.genero}}</div>
-                    <div class="col">{{Alumno.curp}}</div>
-                    <div class="col">{{Alumno.estado}}</div>
-                    <div class="col">{{Alumno.ciudad}}</div>
-                    <div class="col">{{Alumno.celular}}</div>
-                    <div class="col">{{Alumno.telefono}}</div>
-                    <div class="col">{{Alumno.correoPersonal}}</div>
-                </div>
+    <div class="table table-responsive">
+        <table class="table table-striped table-bordered mt-5">
+            <thead class="mb-3 btn-primary">
+                <th class="col">ID</th>
+                <th class="col">Nombre</th>
+                <th class="col">Primer Apellido</th>
+                <th class="col">Segundo Apellido</th>
+                <th class="col">Genero</th>
+                <th class="col">CURP</th>
+                <th class="col">Estado</th>
+                <th class="col">Ciudad</th>
+                <th class="col">Colonia</th>
+                <th class="col">Calle</th>
+                <th class="col">Número Exterior</th>
+                <th class="col">Número Interior</th>
+                <th class="col">Código Postal</th>
+                <th class="col">Celular</th>
+                <th class="col">Teléfono</th>
+                <th class="col">Correo Personal</th>
+                <th class="col">Activo/Desactivo</th>
+            </thead>
+            <tbody *ngFor="let Alumno of alumno">
+                <tr>
+                    <td class="col">{{Alumno.id}}</td>
+                    <td class="col">{{Alumno.nombres}}</td>
+                    <td class="col">{{Alumno.primerApellido}}</td>
+                    <td class="col">{{Alumno.segundoApellido}}</td>
+                    <td class="col">{{Alumno.genero}}</td>
+                    <td class="col">{{Alumno.curp}}</td>
+                    <td class="col">{{Alumno.estado}}</td>
+                    <td class="col">{{Alumno.ciudad}}</td>
+                    <td class="col">{{Alumno.colonia}}</td>
+                    <td class="col">{{Alumno.calle}}</td>
+                    <td class="col">{{Alumno.numeroExterior}}</td>
+                    <td class="col">{{Alumno.numeroInterior}}</td>
+                    <td class="col">{{Alumno.extra}}</td>
+                    <td class="col">{{Alumno.celular}}</td>
+                    <td class="col">{{Alumno.telefono}}</td>
+                    <td class="col">{{Alumno.correoPersonal}}
+                    <td class="col">{{Alumno.activo}}</td>
+                    <td>
+                </tr>
             </tbody>
         </table>
     </div>
