--- a/frontend/recursos/src/app/components/user/registro-aspirante/registro-aspirante.component.html
+++ b/frontend/recursos/src/app/components/user/registro-aspirante/registro-aspirante.component.html
@@ -5,8 +5,8 @@
         
 <form>
     <div class="container-md mt-5">
-        <h1 class="text-center mt-5 col-title">Datos Personales</h1>
-    <div class="row">
+        <h1 class="text-center mt-5 col-title">{{estudiante.id ? 'Edición': 'Registro'}} de Datos Personales</h1>
+    <div class="row" (ngSubmit) = create()>
         <div class="col-md-4 mt-4">
             <label>Nombre</label>
             <input type="text" class="form-control" placeholder="Escribe tu nombre" id="nombre" name="nombre" [(ngModel)]="estudiante.nombres">
