modificando la eliminación lógica

--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/datos-escolares.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/datos-escolares.component.html
@@ -1,8 +1,10 @@
 <app-navv></app-navv>
 
+<!-- Barra de Opciones -->
+<app-barra-opciones></app-barra-opciones>
 
 <div class="mt-3 container-lg">
-    <h1 class="mt-5 font-weight-bold mb-4 text-center">Panel de Administración </h1>
+    <h1 class="mt-5 font-weight-bold mb-4 text-center">Datos Escolares </h1>
     <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-primary border-0" type="submit">Buscar</button>
