--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -3,7 +3,7 @@
     <div class="btn-group w-100 mt-5" role="group" aria-label="Basic example">
         <button type="button" class="btn btn-primary border-0" (click)="inicio()">Inicio</button>
         <button type="button" class="btn btn-primary border-0">Gestionar Alumno</button>
-        <button type="button" class="btn btn-primary border-0">Reportes</button>
+        <button type="button" class="btn btn-primary border-0" (click)="dados_baja()">Reportes</button>
         <button type="button" class="btn btn-primary border-0" (click)="datos_escolares()">Datos Escolares</button>
         <button type="button" class="btn btn-primary border-0">Cerrar Sesión</button>
     </div>
