--- a/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-personales/registro-datos-personales.component.html
+++ b/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-personales/registro-datos-personales.component.html
@@ -1,1 +1,23 @@
-<p>registro-datos-personales works!</p>
+<app-navv></app-navv>
+
+<!-- Modal -->
+        
+<form>
+    <div class="container-md mt-5">
+        <h1 class="text-center mt-5 col-title">{{escolares.id ? 'Edición': 'Registro'}} de Datos Escolares</h1>
+    <div class="row">
+        <div class="col-md-4 mt-4">
+            <label>Correo Escolar</label>
+            <input type="text" class="form-control" placeholder="Escribe tu nombre" id="nombre" name="nombre" [(ngModel)]="escolares.correoEscolar">
+        </div>
+        <div class="col-md-4 mt-4">
+            <label>Carrera</label>
+            <input type="text" class="form-control" placeholder="Escribe tu apellido paterno" id="apellidoPaterno" name="apellidoPaterno" [(ngModel)]="escolares.carrera">
+        </div>
+        <div class="col-md-4 mt-4">
+            <label>Universidad</label>
+            <input type="text" class="form-control" placeholder="Ingresa el nombre de tu universidad" id="apellidoPaterno" name="apellidoPaterno" [(ngModel)]="escolares.universidad">
+        </div>
+
+    </div>
+    </div>
