--- a/frontend/recursos/src/app/components/admin/panel/watch/watch.component.html
+++ b/frontend/recursos/src/app/components/admin/panel/watch/watch.component.html
@@ -9,7 +9,7 @@
         <button class="btn btn-primary border-0" type="submit">Buscar</button>
     </form>
     <div class="table table-responsive">
-        <table class="table table-striped table-bordered mt-5">
+        <table class="table table-striped table-bordered mt-5" (click)="see()">
             <thead class="mb-3 btn-primary">
                 <th class="col">ID</th>
                 <th class="col">Nombre</th>
