--- a/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-personales/registro-datos-personales.component.html
+++ b/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-personales/registro-datos-personales.component.html
@@ -5,19 +5,74 @@
 <form>
     <div class="container-md mt-5">
         <h1 class="text-center mt-5 col-title">{{escolares.id ? 'Edición': 'Registro'}} de Datos Escolares</h1>
-    <div class="row">
-        <div class="col-md-4 mt-4">
-            <label>Correo Escolar</label>
-            <input type="text" class="form-control" placeholder="Escribe tu nombre" id="nombre" name="nombre" [(ngModel)]="escolares.correoEscolar">
+    <div class="row" (ngSubmit) = cargar()>
+        <div class="col-md-3 mt-4">
+            <label class="form-label">Correo Escolar</label>
+            <input type="text" class="form-control" placeholder="Escribe tu correo escolar" id="nombre" name="nombre" [(ngModel)]="escolares.correoEscolar">
+        </div>
+        <div class="col-md-5 mt-4">
+            <label class="form-label">Carrera</label>
+            <input type="text" class="form-control" placeholder="Escribe tu carrera" id="apellidoPaterno" name="apellidoPaterno" [(ngModel)]="escolares.carrera">
         </div>
         <div class="col-md-4 mt-4">
-            <label>Carrera</label>
-            <input type="text" class="form-control" placeholder="Escribe tu apellido paterno" id="apellidoPaterno" name="apellidoPaterno" [(ngModel)]="escolares.carrera">
-        </div>
-        <div class="col-md-4 mt-4">
-            <label>Universidad</label>
+            <label class="form-label">Universidad</label>
             <input type="text" class="form-control" placeholder="Ingresa el nombre de tu universidad" id="apellidoPaterno" name="apellidoPaterno" [(ngModel)]="escolares.universidad">
         </div>
+        <div class="col-md-3 mt-4">
+            <label class="form-label">Matricula Escolar</label>
+            <input type="text" class="form-control" placeholder="Escribe tu matricula Escolar" id="apellidoPaterno" name="apellidoPaterno" [(ngModel)]="escolares.matriculaEscolar">
+        </div>
+        <div class="col-md-3 position-relative mt-4">
+            <label for="periodo" class="form-label">Periodo</label>
+            <div>
+                <select class="form-select" id="periodo" name="periodo" [(ngModel)]="escolares.periodo">
+                    <option selected disabled value="">Elige una de las opciones</option>
+                    <option value="Primero">1ro</option>
+                    <option value="Segundo">2do</option>
+                    <option value="Tercero">3ro</option>
+                    <option value="Cuarto">4to</option>
+                    <option value="Quinto">5to</option>
+                    <option value="Sexto">6to</option>
+                    <option value="Septimo">7mo</option>
+                    <option value="Octavo">8vo</option>
+                    <option value="Noveno">9no</option>
+                    <option value="Decimo">10mo</option>
+                    <option value="Onceavo">11vo</option>
+                    <option value="Doceavo">12vo</option>
+                    <option>Otra</option>
+                </select>
+            </div>
+        </div>
+        <div class="col-md-3 position-relative mt-4">
+            <label for="mod-escolar" class="form-label">Modalidad Escolar</label>
+            <div>
+                <select class="form-select" id="modalidad" name="modalidad" [(ngModel)]="escolares.modalidadEscolar">
+                    <option selected disabled value="">Elige una de las opciones</option>
+                    <option value="Escolarizada">Escolarizada</option>
+                    <option value="Abierta">Abierta</option>
+                    <option value="En linea">En linea</option>
+                    <option>Otra</option>
+                </select>
+            </div>
+        </div>
+        <div class="col-md-3 position-relative mt-4">
+            <label for="plan-educativo" class="form-label">Plan Educativo</label>
+            <div>
+                <select class="form-select" id="plan-educativo" name="plan-educativo" [(ngModel)]="escolares.planEducativo">
+                    <option selected disabled value="">Elige una de las opciones</option>
+                    <option value="Semestral">Semestral</option>
+                    <option value="Cuatrimestral">Cuatrimestral</option>
+                    <option value="Trimestral">Trimestral</option>
+                    <option value="Bimestral">Bimestral</option>
+                    <option>Otra</option>
+                </select>
+            </div>
+        </div>
 
+        <!-- boton -->
+        <button type="button" class="btn btn-secondary border-0 mt-4" role="button" (click)="create()" *ngIf="!escolares.id else elseBlock">Siguiente</button>
+        <ng-template #elseBlock>
+            <button type="button" class="btn btn-secondary border-0 mt-4" role="button" (click)="update()">Actualizar</button>
+        </ng-template>
     </div>
     </div>
