--- a/frontend/recursos/src/app/components/admin/panel-admin/panel-admin.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/panel-admin.component.html
@@ -11,27 +11,28 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-primary border-0" type="submit">Buscar</button>
     </form>
+    <div>
+        <button class="btn col2 btn-sm border-0 text-white me-1 col-1 mt-1" (click)="getAlumno()">Detalles</button>
+    </div>
     <div class="mt-4">
         <div class="row btn-primary text-white text-center">
             <div class="col-1">ID</div>
-            <div class="col-2">Nombre</div>
+            <div class="col-3">Nombre</div>
             <div class="col-2">Primer Apellido</div>
             <div class="col-2">Segundo Apellido</div>
-            <div class="col-1">Editar</div>
-            <div class="col-2">Eliminar</div>
-            <div class="col-1">Detalles</div>
+            <div class="col-2">Editar</div>
+            <div class="col-1">Eliminar</div>
         </div>
     </div>
     <table class="table table-striped mt-3">
         <tbody *ngFor="let Alumno of alumno">
             <div class="row text-center" *ngIf="Alumno.activo == true">
                 <div class="col-1">{{Alumno.id}}</div>
-                <div class="col-2">{{Alumno.nombres}}</div>
+                <div class="col-3">{{Alumno.nombres}}</div>
                 <div class="col-2">{{Alumno.primerApellido}}</div>
                 <div class="col-2">{{Alumno.segundoApellido}}</div>
-                <button type="button" class="btn btn-primary btn-sm border-0 me-1 col-1 text-white mt-1" [routerLink]="['/estudiante', Alumno.id]">Editar</button>
-                <button type="button" class="btn col3 btn-sm border-0 me-1 text-white col-2 mt-1" (click) ="deleteEstudiante(Alumno.id)">Eliminar</button>
-                <button class="btn col2 btn-sm border-0 text-white me-1 col-1 mt-1" [routerLink]="['/detalles', Alumno.id]">Detalles</button>
+                <button type="button" class="btn btn-primary btn-sm border-0 me-1 col-2 text-white mt-1" [routerLink]="['/estudiante', Alumno.id]">Editar</button>
+                <button type="button" class="btn col3 btn-sm border-0 me-1 text-white col-1 mt-1" (click) ="deleteEstudiante(Alumno.id)">Eliminar</button>
             </div>
         </tbody>
     </table>
