--- a/frontend/recursos/src/app/components/admin/panel/watch/watch.component.html
+++ b/frontend/recursos/src/app/components/admin/panel/watch/watch.component.html
@@ -8,8 +8,8 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-primary border-0" type="submit">Buscar</button>
     </form>
-    <div class="table table-responsive">
-        <table class="table table-striped table-bordered mt-5" (click)="see()">
+    <div class="table table-responsive" >
+        <table class="table table-striped table-bordered mt-5">
             <thead class="mb-3 btn-primary">
                 <th class="col">ID</th>
                 <th class="col">Nombre</th>
